2001-07-19  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_get_request_header): Allow
	override of http version. Only include Content-Length if method is
	not GET or HEAD.

	* src/soup-core/soup-message.c (soup_message_new): Set default
	http_version to SOUP_HTTP_1_1;
	(soup_message_set_http_version): Impl.
	(soup_message_get_flags): Check for NULL.

	* src/soup-core/soup-private.h: Add http_version to _SoupMessagePrivate.

2001-07-19  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump version to 0.4.0.

2001-07-19  Alex Graveley  <alex@ximian.com>

	* configure.in: Remove -Werror from WSDL_CFLAGS as this ills on so
	many redhat distros. Remove unused ISO C99 IEEE754 section. Set
	the default to hide more warnings.

	* src/soup-wsdl-runtime/wsdl-typecodes.c: Remove \r from end of
	lines.

	* src/soup-wsdl/Makefile.am: Formatting.
	* src/soup-wsdl-runtime/Makefile.am: Formatting.

2001-07-17  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-context.c (soup_context_uri_hash): Add
	querysting to hash.
	(soup_context_uri_equal): Compare querystring for equality.

	* src/soup-core/soup-transfer.c (soup_transfer_read_error_cb): Add
	gross hack to avoid double frees by only freeing the SoupReader
	or SoupWriter if we are not currently processing a callback.
	(soup_transfer_read_cb): Ditto
	(soup_transfer_write_error_cb): Ditto.
	(soup_transfer_write_cb): Ditto.
	(soup_transfer_read_cancel): Return if currently processing a callback.
	(soup_transfer_write_cancel): Ditto.

	* src/soup-core/soup-message.c (soup_message_new): Add
	redirect_handler by default.
	(soup_message_set_flags): Remove redirect handler when
	SOUP_MESSAGE_NO_REDIRECT is set, and add it when it is unset.

	* src/soup-core/soup-message.h: Change SOUP_MESSAGE_FOLLOW_REDIRECT to
	SOUP_MESSAGE_NO_REDIRECT, as redirect is on by default now.

2001-07-16  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Set len