@@ -1,3 +1,9 @@
+2001-07-25  Joe Shaw  <joe@ximian.com>
+
+	* src/soup-core/soup-socket.c (soup_address_new,
+	soup_address_get_name): Close a bunch of leaked file descriptors from
+	piping.
+
 2001-07-19  Alex Graveley  <alex@ximian.com>
 
 	* src/soup-core/soup-queue.c (soup_get_request_header): Allow
